# black-tonny-backend-base

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
docs/: README.md  active-migration-plan.md  admitted-transform-input-boundary.md  capture-batch-field-semantics.md  capture-minimal-boundary.md  capture-minimal-contract.md  capture-serving-boundary.md  capture-to-sales-orders-path.md  clean-mainline-charter.md  domain-migration-completeness-map.md  first-path-hardening-minimums.md  formal-planning-reference-boundary-and-exploration-taxonomy.md  legacy-backend-migration-mapping.md  legacy-capture-bridge-note.md  legacy-research-bridge-note.md  orders-adjacent-contract-entry-minimums.md  orders-adjacent-detail-clue-answer.md  orders-adjacent-payload-family-baseline.md  orders-adjacent-payload-semantics-baseline.md  orders-adjacent-primary-carrier-answer.md  orders-adjacent-relation-answer.md  orders-adjacent-single-target-mapping-minimums.md  orders-adjacent-source-evidence-baseline.md  orders-first-adjacent-contract-baseline.md  orders-first-adjacent-contract-implementation-preflight.md  orders-first-adjacent-contract-prep-boundary-baseline.md  orders-first-adjacent-contract-prep-candidate-scope.md  orders-first-adjacent-contract-prep-preflight.md  orders-first-adjacent-contract-questions.md  orders-first-adjacent-scoped-contract-statement.md  orders-source-accuracy-minimums.md  orders-source-accuracy-revisit.md  post-route-mainline-planning.md  research-support-current-surface.md  runtime-boundaries.md  sales-orders-projection-contract.md  serving-projection-minimal-boundary.md  source-surface-completeness-map.md  transform-input-boundary.md  transform-readiness-boundary.md  (+2 more)
scripts/: _collab_common.py  copy-changed-files  copy-migration-anchors  copy-pr-diff  copy-pr-template-draft
src/: alembic.ini  alembic_capture.ini  alembic_serving.ini
tests/: conftest.py  test_admitted_transform_input_selector.py  test_analysis_batches_formal_surface.py  test_capture_constants.py  test_capture_formal_boundary.py  test_capture_to_sales_orders_path.py  (+20 more)
(+127 files in other folders)
